Boolean modifier - intersection fails for Suzanne and a cuboid #38962

Closed
opened 2014-03-05 02:07:21 +01:00 by CodeManX · 12 comments
Member

System Information
Windows 7

Blender Version
Broken: 2.69.11 ef40e889c

Short description of error
Cannot execute boolean operator appears at certain cuboid rotation angles, test file: intersect.blend

The following error is printed to console:

CSG failed, exception extern\carve\include\carve/csg_triangulator.hpp:396  tri_e
dge.find(e1) != tri_edge.end()

After a pretty aggressive remove doubles, it prints:

CSG failed, exception non intersecting group is not IN or OUT! (poly_b)
uncontained hole loop does not share vertices with any face loop!
uncontained hole loop does not share vertices with any face loop!
CSG failed, exception non intersecting group is not IN or OUT! (poly_a)
CSG failed, exception extern\carve\lib\triangulator.cpp:916  "didn't manage to l
ink up hole!"

Is it a known limitation even with new CARVE integration? And what exactly makes it fail?

**System Information** Windows 7 **Blender Version** Broken: 2.69.11 ef40e889c **Short description of error** `Cannot execute boolean operator` appears at certain cuboid rotation angles, test file: [intersect.blend](https://archive.blender.org/developer/F79951/intersect.blend) The following error is printed to console: ``` CSG failed, exception extern\carve\include\carve/csg_triangulator.hpp:396 tri_e dge.find(e1) != tri_edge.end() ``` After a pretty aggressive remove doubles, it prints: ``` CSG failed, exception non intersecting group is not IN or OUT! (poly_b) uncontained hole loop does not share vertices with any face loop! uncontained hole loop does not share vertices with any face loop! CSG failed, exception non intersecting group is not IN or OUT! (poly_a) CSG failed, exception extern\carve\lib\triangulator.cpp:916 "didn't manage to l ink up hole!" ``` Is it a known limitation even with new CARVE integration? And what exactly makes it fail?
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @CodeManX

Added subscriber: @CodeManX

Added subscriber: @joel.godin

Added subscriber: @joel.godin

For me this bug works just by adding cube, add monkey, add boolean to monkey (leave default intersect) choose cube, crash.

Crash log attached.

BoolBug.txt

OSX 10.9.2

For me this bug works just by adding cube, add monkey, add boolean to monkey (leave default intersect) choose cube, crash. Crash log attached. [BoolBug.txt](https://archive.blender.org/developer/F79974/BoolBug.txt) OSX 10.9.2

Added subscriber: @ignatz

Added subscriber: @ignatz

I'm not qualified to examine the code, but I do know that the Suzanne model is not a completely closed model. To be precise, the eyes are open areas stuck into the head and I believe this would cause problems for the boolean operation.

I'm not qualified to examine the code, but I do know that the Suzanne model is not a completely closed model. To be precise, the eyes are open areas stuck into the head and I believe this would cause problems for the boolean operation.

Just ran a test. I did the following with the file in question: (A) selected Suzanne, went into edit mode and removed floating eye pieces. (B) Then filled up Suzanne's open eye sockets, recalculated mesh and then the boolean operation worked as expected with no complaints.

Just ran a test. I did the following with the file in question: (A) selected Suzanne, went into edit mode and removed floating eye pieces. (B) Then filled up Suzanne's open eye sockets, recalculated mesh and then the boolean operation worked as expected with no complaints.

Final thought: Would it not be a good idea at this late date to change/alter the default Suzanne model so that it IS a closed 3D shape?

Final thought: Would it not be a good idea at this late date to change/alter the default Suzanne model so that it IS a closed 3D shape?

This issue was referenced by blender/blender-addons-contrib@6ddb1faca9

This issue was referenced by blender/blender-addons-contrib@6ddb1faca976744c2c714c242d781cd42a226ef0

This issue was referenced by 6ddb1faca9

This issue was referenced by 6ddb1faca976744c2c714c242d781cd42a226ef0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 6ddb1faca9.

Closed by commit 6ddb1faca9.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38962
No description provided.