Fix T38962: Boolean modifier crashes when only right operand has UV layer